--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
     <header>
-      <h1>Learn about the solar system</h1>
+      <h1>Learn about the solar-system</h1>
     </header>
     <nav>
       <li><a href="planets.html">Planets</a></li>
