--- a/quiz.html
+++ b/quiz.html
@@ -18,7 +18,60 @@
       <li>How many planets are there in the solar system-------</li>
 
       <li>Otline the main planets in the solor system-------</li>
-      
+
+      <li>What is the largest planet in the solar system-------</li>
+
+      <li>What is the smallest planet in the solar system-------</li>
+
+      <li>What is the hottest planet in the solar system-------</li>
+
+      <li>What is the coldest planet in the solar system-------</li>  
+
+      <li>What is the furthest planet from the sun-------</li>
+
+      <li>What is the closest planet to the sun-------</li>   
+
+      <li>What is the planet with the most moons-------</li>
+
+      <li>What is the planet with the least moons-------</li> 
+
+      <li>What is the planet with the most rings-------</li>  
+
+      <li>What is the planet with the least rings-------</li>
+
+      <li>What is the planet with the most extreme weather-------</li>
+
+      <li>What is the planet with the least extreme weather-------</li>
+
+      <li>What is the planet with the most diverse ecosystems-------</li>
+
+      <li>What is the planet with the least diverse ecosystems-------</li>
+
+      <li>What is the planet with the most interesting geology-------</li>
+
+
     </ol>
+    <p>Answers:</p>
+    <ul>
+      <li>Mercury</li>
+      <li>Earth</li>
+      <li>None</li>
+      <li>8</li>
+      <li>Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, Neptune</li>
+      <li>Jupiter</li>
+      <li>Mercury</li>
+      <li>Venus</li>
+      <li>Neptune</li>
+      <li>Mercury</li>
+      <li>Jupiter</li>
+      <li>Mercury</li>
+      <li>Saturn</li>
+      <li>Uranus</li>
+      <li>Neptune</li>
+      <li>Earth</li>
+      <li>Mars</li>
+      <li>Earth</li>
+      <li>Mars</li>
+      <li>Earth</li>
   </body>
 </html>
